--- a/app/src/main/res/layout/activity_signup_merchant.xml
+++ b/app/src/main/res/layout/activity_signup_merchant.xml
@@ -8,6 +8,7 @@
 
 
     <TextView
+        android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -15,16 +16,14 @@
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
         android:text="@string/filldata"
-        android:textSize="20sp"
-        android:id="@+id/ag"/>
+        android:textSize="20sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="125dp"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="50dp"
         android:text="@string/name"
         android:textSize="15sp" />
 
@@ -32,51 +31,85 @@
         android:id="@+id/merchant_layout_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:layout_alignBaseline="@+id/null"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="78dp"
-        android:text="@string/ahmad"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="40dp"
+        android:hint="@string/your_name"
         android:textSize="15sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="160dp"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="90dp"
         android:text="@string/Place"
         android:textSize="15sp" />
 
+    <EditText
+        android:id="@+id/merchant_layout_place"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/merchant_layout_name"
+        android:layout_marginStart="200dp"
+        android:hint="@string/your_place"
+        android:textSize="15sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="195dp"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="132dp"
         android:text="@string/idcard"
         android:textSize="15sp" />
 
-    <TextView
+    <EditText
+        android:id="@+id/merchant_layout_idcard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="230dp"
-        android:text="@string/age"
+        android:layout_below="@+id/merchant_layout_place"
+        android:layout_marginStart="200dp"
+        android:hint="@string/your_idnumber"
+        android:inputType="number"
         android:textSize="15sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="265dp"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="174dp"
+        android:text="@string/age"
+        android:textSize="15sp" />
+
+    <EditText
+        android:id="@+id/merchant_layout_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/merchant_layout_idcard"
+        android:layout_marginStart="200dp"
+        android:hint="@string/your_age"
+        android:inputType="number"
+        android:textSize="15sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/txt"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="216dp"
         android:text="@string/WANumber"
+        android:textSize="15sp" />
+
+    <EditText
+        android:id="@+id/merchant_layout_wanumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/merchant_layout_age"
+        android:layout_marginStart="200dp"
+        android:hint="@string/your_wa"
+        android:inputType="number"
         android:textSize="15sp" />
 
     <TextView
