--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="login_button_vertical_margin">20dp</dimen>
     <dimen name="login_button_horizontal_margin">75dp</dimen>
+    <dimen name="logo_w_h">150dp</dimen>
 </resources>
