--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -17,6 +17,7 @@
             android:layout_width="@dimen/logo_w_h"
             android:layout_height="@dimen/logo_w_h"
             android:layout_gravity="center"
+            android:contentDescription="@string/app_name"
             android:src="@drawable/treemoney" />
 
         <android.support.design.widget.TextInputLayout
@@ -84,7 +85,8 @@
             android:background="@null"
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
-            android:textSize="15dp" />
+            android:textColor="@color/colorAccent"
+            android:textSize="15sp" />
 
 
     </LinearLayout>
