--- a/app/src/main/res/layout/activity_merchant_login.xml
+++ b/app/src/main/res/layout/activity_merchant_login.xml
@@ -81,7 +81,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Button
-                    android:id="@+id/merchant_login_button"
+                    android:id="@+id/btn_merchant_login"
                     style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
