--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -69,14 +69,16 @@
                     android:layout_marginTop="20dp"
                     android:orientation="horizontal">
 
-                    <TextView
-                        style="@style/TextContent.LabelKoin"
+                    <Button
+                        android:id="@+id/btn_koin_putih"
+                        style="@style/TextContent.BtnKoin"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="1"
                         android:background="@color/colorPrimary"
                         android:text="@string/koin_putih_label"
-                        android:textAlignment="center" />
+                        android:textAlignment="center"
+                        android:textAllCaps="false" />
 
                     <TextView
                         android:id="@+id/jml_koin_putih"
@@ -96,8 +98,9 @@
                     android:layout_marginTop="30dp"
                     android:orientation="horizontal">
 
-                    <TextView
-                        style="@style/TextContent.LabelKoin"
+                    <Button
+                        android:id="@+id/btn_koin_hijau"
+                        style="@style/TextContent.BtnKoin"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="1"
@@ -112,7 +115,7 @@
                         android:layout_height="50dp"
                         android:layout_weight="1"
                         android:background="@color/colorPrimary"
-                        android:text="12,549 Koin"
+                        android:text="@string/not_available"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -123,8 +126,9 @@
                     android:layout_marginTop="30dp"
                     android:orientation="horizontal">
 
-                    <TextView
-                        style="@style/TextContent.LabelKoin"
+                    <Button
+                        android:id="@+id/btn_koin_merah"
+                        style="@style/TextContent.BtnKoin"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
                         android:layout_weight="1"
@@ -139,7 +143,7 @@
                         android:layout_height="50dp"
                         android:layout_weight="1"
                         android:background="@color/colorPrimary"
-                        android:text="12,549 Koin"
+                        android:text="@string/not_available"
                         android:textAlignment="center" />
 
                 </LinearLayout>
@@ -150,9 +154,9 @@
         </ScrollView>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/merchant_login_button"
-        style="@style/TextContent.LabelKoin"
+    <Button
+        android:id="@+id/btn_merchant_login"
+        style="@style/TextContent.BtnKoin"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_above="@id/menu_button"
@@ -173,20 +177,22 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <TextView
-            style="@style/TextContent.LabelKoin"
+        <Button
+            android:id="@+id/btn_bulletin"
+            style="@style/TextContent.BtnKoin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/colorPrimary"
+            android:background="@color/colorPrimary"
             android:text="@string/bulletin_label_button" />
 
-        <TextView
-            style="@style/TextContent.LabelKoin"
+        <Button
+            android:id="@+id/btn_setting"
+            style="@style/TextContent.BtnKoin"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/colorPrimary"
+            android:background="@color/colorPrimary"
             android:text="@string/settings_label_button" />
 
     </LinearLayout>
