--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,15 @@
         <item name="android:textAlignment">center</item>
         <item name="android:textSize">18sp</item>
         <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
+    <style name="TextContent.BtnKoin">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textAllCaps">false</item>
 
     </style>
 
