--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -49,16 +49,23 @@
 
                         <TextView
                             android:id="@+id/txt_name"
+                            style="@style/TextContent.LabelKoin"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
-                            android:textSize="20sp" />
+                            android:text="Your Name"
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/txt_email"
+                            style="@style/TextContent.LabelKoin"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
+                            android:text="Your Email"
+                            android:textColor="@android:color/black"
                             android:textSize="18sp" />
                     </LinearLayout>
                 </LinearLayout>
