--- a/app/src/main/res/layout/activity_signup_merchant.xml
+++ b/app/src/main/res/layout/activity_signup_merchant.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -123,12 +122,16 @@
         android:textSize="18sp" />
 
     <Button
+        android:id="@+id/btn_sign_up"
+        style="@style/TextContent.BtnKoin"
         android:layout_width="163dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="73dp"
-        android:text="@string/signUp" />
+        android:background="@color/colorPrimary"
+        android:text="@string/signUp"
+        android:textStyle="bold" />
 
 
     <LinearLayout
