--- a/app/src/main/res/layout/activity_koin_page.xml
+++ b/app/src/main/res/layout/activity_koin_page.xml
@@ -21,6 +21,7 @@
                 style="@style/TextContent.LabelKoin"
                 android:layout_width="wrap_content"
                 android:layout_height="80dp"
+                android:layout_marginBottom="20dp"
                 android:layout_span="2"
                 android:background="@color/colorPrimary"
                 android:gravity="center_vertical"
@@ -101,6 +102,7 @@
                 style="@style/TextContent.BtnKoin"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
+                android:layout_marginTop="20dp"
                 android:layout_span="2"
                 android:background="@color/colorAccent"
                 android:gravity="center_vertical"
@@ -119,6 +121,7 @@
                 style="@style/TextContent.BtnKoin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
                 android:layout_span="2"
                 android:height="40dp"
                 android:background="@color/colorAccent"
