--- a/app/src/main/res/layout/activity_create_qr_code_to_send_koin.xml
+++ b/app/src/main/res/layout/activity_create_qr_code_to_send_koin.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TreeQrCode">
+    tools:context=".CreateQrCodeToSendKoin">
 
     <ImageView
         android:layout_width="250dp"
@@ -16,11 +16,11 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@id/footer"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="140dp"
-        android:stretchColumns="*"
-        android:layout_above="@id/footer">
+        android:layout_marginBottom="200dp"
+        android:stretchColumns="*">
 
 
         <TableRow
@@ -30,31 +30,16 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:height="25dp"
+                android:height="90dp"
                 android:gravity="center"
-                android:text="AIRKOIN.COM"
+                android:text="The QR Code above contains with 100 koins,\nplease use the QR code with caution!"
                 android:textAlignment="center"
                 android:textColor="#000"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
         </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:text="QR CODE AVAILABLE UNTIL 05 MARCH 2018"
-                android:height="70dp"
-                android:gravity="center"
-                android:textColor="#000"/>
-
-        </TableRow>
-
-
 
     </TableLayout>
-
 
 
     <LinearLayout
