--- a/app/src/main/res/layout/activity_tree_qr_code.xml
+++ b/app/src/main/res/layout/activity_tree_qr_code.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +10,7 @@
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@drawable/pohonkoin" />
+        android:background="@null" />
 
     <TableLayout
         android:layout_width="match_parent"
