--- a/app/src/main/res/layout/activity_create_qr_code_to_send_koin.xml
+++ b/app/src/main/res/layout/activity_create_qr_code_to_send_koin.xml
@@ -10,7 +10,7 @@
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@null" />
+        android:background="@drawable/pohonkoin" />
 
     <TableLayout
         android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                 android:text="The QR Code above contains with 100 koins,\nplease use the QR code with caution!"
                 android:textAlignment="center"
                 android:textColor="#000"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
 
         </TableRow>
 
