--- a/app/src/main/res/layout/activity_tree_qr_code.xml
+++ b/app/src/main/res/layout/activity_tree_qr_code.xml
@@ -10,7 +10,7 @@
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
-        android:background="@null" />
+        android:background="@drawable/pohonkoin" />
 
     <TableLayout
         android:layout_width="match_parent"
