--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -32,19 +32,22 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:orientation="horizontal"
                     android:weightSum="3">
 
                     <ImageView
                         android:id="@+id/img_profile_pic"
-                        android:layout_width="80dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1" />
+                        android:layout_width="110dp"
+                        android:layout_height="110dp"
+                        android:src="@drawable/treemoney" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:layout_marginStart="10dp"
                         android:layout_weight="2"
                         android:orientation="vertical">
 
